@@ -1,3 +1,4 @@
+<a name="benchmarking"></a>
 
 <h2>Notation benchmarking</h2>
 
