@@ -1,4 +1,6 @@
 
+<a name="implementing-typography"></a>
+
 
 <h2>Implementing typography</h2>
 
