@@ -1,3 +1,4 @@
+<a href="input-format"></a>
 
 <h2>Input format</h2>
 <p>
