@@ -1,3 +1,4 @@
+<a name="introduction"></a>
 
 <h2>What's wrong with computer music notation?</h2>
 
