@@ -1,3 +1,5 @@
+<a name="typography-features"></a>
+
 <h2>Font design</h2>
 
 A large factor that makes LilyPond output look traditional lies in the
